--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,17 @@ body {
 .btn {
   @apply border-none py-4 w-full rounded-4xl border-gray-400 text-white  font-bold;
 }
+@keyframes fade-in-slide {
+  from {
+    opacity: 0;
+    transform: translateX(-12px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.animate-fade-in-slide {
+  animation: fade-in-slide 0.6s ease-out;
+}
